--- a/apps/alpha/package.json
+++ b/apps/alpha/package.json
@@ -1,6 +1,7 @@
 {
   "name": "alpha",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "payload": "payload",
-    "update-config": "dotenv go run package/script.go"
+    "update-config": "dotenv go run package/script.go",
+    "seed": "node package/seed/test.js",
+    "api": "node package/seed/api.js"
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "alpha",
@@ -21,7 +24,8 @@
     "payload": "alpha",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
