--- a/apps/alpha/package.json
+++ b/apps/alpha/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "alpha",
+  "name": "next-latest-starter",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "payload": "payload",
+    "dev": "NODE_OPTIONS=--no-deprecation next dev",
+    "devsafe": "rm -rf .next && NODE_OPTIONS=--no-deprecation next dev",
+    "build": "NODE_OPTIONS=--no-deprecation next build",
+    "payload": "NODE_OPTIONS=--no-deprecation payload",
+    "start": "NODE_OPTIONS=--no-deprecation next start",
+    "lint": "NODE_OPTIONS=--no-deprecation next lint",
     "update-config": "dotenv go run package/script.go",
     "seed": "node package/seed/test.js",
     "api": "node package/seed/api.js"
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "dependencies": {
-    "@payloadcms/db-mongodb": "alpha",
-    "@payloadcms/db-postgres": "alpha",
-    "@payloadcms/next": "alpha",
-    "@payloadcms/richtext-lexical": "alpha",
-    "@payloadcms/richtext-slate": "alpha",
-    "dotenv": "^16.4.5",
+    "@payloadcms/db-mongodb": "3.0.0-alpha.42",
+    "@payloadcms/db-postgres": "3.0.0-alpha.42",
+    "@payloadcms/next": "3.0.0-alpha.42",
+    "@payloadcms/richtext-lexical": "3.0.0-alpha.42",
+    "@payloadcms/richtext-slate": "3.0.0-alpha.42",
     "next": "14.2.0-canary.10",
-    "payload": "alpha",
-    "react": "^18",
-    "react-dom": "^18",
+    "payload": "3.0.0-alpha.42",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "0.32.6",
-    "ts-node": "^10.9.2"
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5.4.2"
+  },
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2"
 }
