--- a/apps/alpha/package.json
+++ b/apps/alpha/package.json
@@ -4,38 +4,42 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS=--no-deprecation next dev",
-    "devsafe": "rm -rf .next && NODE_OPTIONS=--no-deprecation next dev",
-    "build": "NODE_OPTIONS=--no-deprecation next build",
-    "payload": "NODE_OPTIONS=--no-deprecation payload",
-    "start": "NODE_OPTIONS=--no-deprecation next start",
-    "lint": "NODE_OPTIONS=--no-deprecation next lint",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
+    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
+    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "update-config": "dotenv go run package/script.go",
-    "seed": "node package/seed/test.js",
+    "seed": "tsx package/seed/seed.js",
     "api": "node package/seed/api.js"
   },
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18.19.0"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "3.0.0-alpha.42",
-    "@payloadcms/db-postgres": "3.0.0-alpha.42",
-    "@payloadcms/next": "3.0.0-alpha.42",
-    "@payloadcms/richtext-lexical": "3.0.0-alpha.42",
-    "@payloadcms/richtext-slate": "3.0.0-alpha.42",
+    "@payloadcms/db-mongodb": "3.0.0-alpha.46",
+    "@payloadcms/db-postgres": "3.0.0-alpha.46",
+    "@payloadcms/next": "3.0.0-alpha.46",
+    "@payloadcms/richtext-lexical": "3.0.0-alpha.46",
+    "@payloadcms/richtext-slate": "3.0.0-alpha.46",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "next": "14.2.0-canary.10",
-    "payload": "3.0.0-alpha.42",
+    "@repo/npm-payload": "workspace:*",
+    "payload": "3.0.0-alpha.46",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "0.32.6",
-    "dotenv": "^16.4.5"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   },
   "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2"
