--- a/apps/alpha/package.json
+++ b/apps/alpha/package.json
@@ -18,19 +18,20 @@
     "node": ">=18.19.0"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "3.0.0-alpha.46",
-    "@payloadcms/db-postgres": "3.0.0-alpha.46",
-    "@payloadcms/next": "3.0.0-alpha.46",
-    "@payloadcms/richtext-lexical": "3.0.0-alpha.46",
-    "@payloadcms/richtext-slate": "3.0.0-alpha.46",
+    "@payloadcms/db-mongodb": "3.0.0-alpha.48",
+    "@payloadcms/db-postgres": "3.0.0-alpha.48",
+    "@payloadcms/next": "3.0.0-alpha.48",
+    "@payloadcms/richtext-lexical": "3.0.0-alpha.48",
+    "@payloadcms/richtext-slate": "3.0.0-alpha.48",
+    "@repo/npm-payload": "workspace:*",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "next": "14.2.0-canary.10",
-    "@repo/npm-payload": "workspace:*",
-    "payload": "3.0.0-alpha.46",
+    "payload": "3.0.0-alpha.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
